# FastAPI-TODO-API

./: .env.template  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 47c1a44b8a14_create_users_table.py  a65fc0617bf3_add_projects_and_tasks.py
app/: config.py  db.py  main.py
app/api/v1/: projects.py  tasks.py  users.py
app/auth/: jwt.py  router.py
app/models/: __init__.py  project.py  user.py
app/schemas/: __init__.py  task.py
app/tests/: test_users.py
models/: user.py
