[project]
name = "fastapi-todo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "black>=25.11.0",
    "fastapi>=0.123.10",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.8",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
