[project]
name = "fastapi-todo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic==1.17.2",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asyncpg==0.31.0",
    "bcrypt==4.0.1",
    "black==25.11.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "fastapi==0.123.10",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "httpx>=0.28.1",
    "idna==3.11",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "passlib[bcrypt]==1.7.4",
    "pathspec==0.12.1",
    "platformdirs==4.5.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "python-dotenv==1.2.1",
    "pytokens==0.3.0",
    "ruff==0.14.8",
    "sqlalchemy==2.0.44",
    "starlette==0.50.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.38.0",
]
